# aegis

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  RULES.md  pyproject.toml
aegis/: __init__.py  cli.py  constants.py
aegis/compiler/: compiler.py  rule_parser.py  state_manager.py  tools.py
aegis/core/: context.py  engine.py  policy_model.py  proxy.py
aegis/policies/: default.rego
aegis/runtime/: claude_launcher.py  config.py  control.py  control_cli.py  events.py  launcher.py  notify_hook.py  session.py  test_policy.py
