[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-ai"
version = "0.1.0"
description = "Policy enforcement for AI coding agents — write rules in plain English, enforce with OPA"
requires-python = ">=3.10"
license = "MIT"
dependencies = []
readme = "README.md"
keywords = ["ai", "policy", "opa", "codex", "claude", "guardrails", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/autoppia/aegis"
Repository = "https://github.com/autoppia/aegis"

[project.scripts]
aegis = "aegis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
